# src/controller/mapper/index.ts
@@ -12,3 +12,4 @@ export * from "./payed-ticket.mapper";
 export * from "./ticket-status.mapper";
 export * from "./operation-result.mapper";
 export * from "./activity.mapper";
+export * from "./presence.mapper";
