# src/controller/rest/presence-status.ts
@@ -1,0 +1,10 @@
+import { ApiProperty } from "@nestjs/swagger";
+import { User } from "./user";
+
+export class PresenceStatus {
+  @ApiProperty({ type: User })
+  user: User;
+
+  @ApiProperty()
+  isPresent: boolean;
+}
