# src/service/model/presence-status.ts
@@ -1,0 +1,6 @@
+import { User } from "src/model";
+
+export class PresenceStatus {
+  user: User;
+  isPresent: boolean;
+}
